--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@types/jest": "^24.0.15",
     "express": "^4.17.1",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.0"
   },
   "devDependencies": {
     "jest": "^24.8.0"
