--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-server",
   "version": "1.0.0",
   "description": "Backend server of todo client applications",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "jest"
   },
